Readme in Markdown, Display Version as a separate command

--- a/info.plist
+++ b/info.plist
@@ -12,6 +12,7 @@
             <array>
                 <string>B984C580-49E6-4A38-8B38-4AE92F882870</string>
                 <string>82F2C44D-1D5F-4D9F-9E87-AA716675B0DA</string>
+                <string>E34AF00B-53AF-4CF4-A3E8-8476D4A4DB2B</string>
             </array>
         </dict>
     </dict>
